master/qcheckserv/static/css/style.css
:root{
    --background-main: #222;
    --background-hover: #444;
    --text-main: #EEE;
    --highlight: rgb(99, 255, 132);
    --highlight-alt: rgba(99, 255, 132, 0.2);
    --highlight-disabled: rgb(34, 85, 45);
    --warning: #FA0;
    --error: #F00;
}

body {
    background-color: var(--background-main);
    color: var(--text-main);
    font-family: "Montserrat", sans-serif;
    font-optical-sizing: auto;
    font-style: normal;
    display: flex;
    margin: 0;
}

a {
    text-decoration: none;
}

.hidden {
    display: none;
}

.btn, input, fieldset {
    margin: 5px;
    padding: 10px 15px;
    border: 1px solid var(--highlight);
    border-radius: 5px;
    font-family: "Montserrat", sans-serif;
    background-color: var(--background-main);
    color: var(--text-main);
}

.btn:hover {
    background-color: var(--highlight);
    color: var(--background-main);
    cursor: pointer;
}

nav {
    min-width: 250px;
    position: fixed;
    left: 0;
    top: 0;
    z-index: 10;
}

nav .logo {
    width: 128px;
    height: 128px;
    margin: 20px auto;
}

nav .logo img {
    width: 100%;
}

nav .menu {
    display: flex;
    flex-direction: column;
}

nav .menu a, nav .logout a {
    color: var(--text-main);
    text-decoration: none;
    padding: 30px 0 30px 30px;
    margin: 5px 0;
    text-align: center;
    border-top: 1px solid var(--text-main);
    border-bottom: 1px solid var(--text-main);
    border-right: 1px solid var(--text-main);
    border-radius: 5px;
    display: flex;
    align-items: center;
}

nav .menu a:hover, nav .logout a:hover {
    color: var(--highlight);
}

nav .menu a:hover, nav .logout a:hover, nav .menu a.active {
    border-top: 1px solid var(--highlight);
    border-bottom: 1px solid var(--highlight);
    border-right: 1px solid var(--highlight);
}

nav .menu a.wip {
    border-top: 1px solid var(--highlight-disabled);
    border-bottom: 1px solid var(--highlight-disabled);
    border-right: 1px solid var(--highlight-disabled);
    color: var(--highlight-disabled);
}

nav .menu i, nav .logout i {
    font-size: 25px;
    margin-right: 17px;
}

nav .menu a.active i {
    color: var(--highlight);
}

nav .menu a .tag {
    position: absolute;
    right: -15px;
    background-color: var(--highlight);
    color: var(--background-main);
    padding: 3px 5px;
    border-radius: 3px;
}

.notifications {
    position: fixed;
    top: 0;
    right: 0;
    color: var(--text-main);
    max-width: 350px;
}

.notifications .notification {
    background-color: var(--background-main);
    padding: 15px;
    margin: 15px;
    border: 1px solid var(--highlight);
    border-left: 8px solid var(--highlight);
    border-radius: 3px;
}

.notifications .notification.warning {
    border: 1px solid var(--warning);
    border-left: 8px solid var(--warning);
}

.notifications .notification.error {
    border: 1px solid var(--error);
    border-left: 8px solid var(--error);
}

.notifications .notification:hover {
    cursor: pointer;
    background-color: var(--background-hover);
}

.wrapper {
    margin-left: 250px;
}

.wrapper .loading-overlay {
    position: fixed;
    right: 0;
    top: 0;
    height: 100%;
    width: calc(100% - 250px);
    z-index: 1;
    background-color: var(--background-main);
    display: flex;
    justify-content: center;
    align-items: center;
}

.loading-overlay .bar {
    width: 6px;
    height: 60px;
    background: white;
    display: inline-block;
    transform-origin: bottom;
    animation: loading 2s ease-in-out infinite;
}

.loading-overlay .bar:nth-child(1) { animation-delay: .1s }
.loading-overlay .bar:nth-child(2) { animation-delay: .2s }
.loading-overlay .bar:nth-child(3) { animation-delay: .3s }
.loading-overlay .bar:nth-child(4) { animation-delay: .4s }
.loading-overlay .bar:nth-child(5) { animation-delay: .5s }
.loading-overlay .bar:nth-child(6) { animation-delay: .6s }
.loading-overlay .bar:nth-child(7) { animation-delay: .7s }
.loading-overlay .bar:nth-child(8) { animation-delay: .8s }

@keyframes loading {
    0% {
        transform: scaleY(0.1);
        background-color: var(--text-main);
    }
    50% {
        transform: scaleY(1);
        background-color: var(--highlight);
    }
    100% {
        transform: scaleY(0.1);
        background-color: transparent;
    }
}

.graphs {
    display: flex;
    width: 100%;
    flex-wrap: wrap;
    justify-content: center;
    text-align: center;
    margin: 120px 0 70px 0;
}

.graphs h2 {
    margin: 30px 0 0 0;
}

.graphs hr {
    width: 80%;
}

.info {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin: 0;
    padding: 10px 30px;
    position: fixed;
    border-bottom: 1px solid var(--text-main);
    width: calc(100% - 350px);
    background-color: var(--background-main);
}

.info .filters {
    display: flex;
}

.info .search-timeframe {
    display: flex;
    margin-left: 15px;
    align-items: center;
    margin: auto;
}

.info .search-timeframe label {
    text-align: right;
    margin: 0 15px;
}

.info .search-timeframe input {
    width: 145px;
}

.filter-list {
    display: flex;
}

.filter-list a, #is-data-live-toggle a {
    display: flex;
    justify-content: center;
    align-items: center;
    
    border: 2px solid var(--text-main);
    border-radius: 5px;
    color: var(--text-main);
    background-color: var(--highlight-alt);
    padding: 7px;
    margin: 5px;
    width: 25px;
    height: 25px;
    text-decoration: none;
}

.filter-list a:hover , #is-data-live-toggle a:hover {
    cursor: pointer;
    background-color: var(--background-hover);
    border-color: var(--highlight);
}

.filter-list a.active, #is-data-live-toggle a.active {
    background-color: var(--background-main);
    border-color: var(--highlight);
}

.storage-list {
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    width: 600px;
}

.storage-list table {
    width: 100%;
}

.storage-list table th {
    padding: 10px 0;
}

.storage-list table td {
    padding: 5px 0;
    font-family: "Roboto Mono";
    text-align: right;
}

.storage-list table td:nth-child(1) {
    text-align: center;
}

.process-list {
    width: 600px;
    margin: 50px auto;
}

.process-list table {
    width: 100%;
}

.process-list table td {
    max-width: 400px;
    white-space: nowrap;
    word-break: break-word;
    text-overflow: ellipsis;
    overflow: hidden;
}

.search-bar {
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
}

.search-bar #server-search {
    margin: 30px 0 0 0;
    width: 500px;
}

.item-groups {
    width: calc(100vw - 450px);
    display: flex;
    justify-content: center;
    flex-direction: column;
    margin: 50px 100px 50px 100px;
}

.list-group {
    width: 100%;
}

.list-group .item-header {
    padding: 14px 6px;
    display: flex;
    align-items: center;
    justify-content: space-between;
    cursor: pointer;
    border-bottom: 1px solid var(--highlight);
}

.list-group .item-header:hover {
    color: var(--highlight);
}

.list-group .item-header h2 {
    font-size: 20px;
    font-weight: 600;
}

.list-group .item-header .icon {
    width: 28px;
    height: 28px;
    border: 1px solid var(--highlight);
    border-radius: 50%;
    text-align: center;
    font-size: 30px;
    font-weight: 400;
    line-height: 30px;
}

.list-group .item-content {
    display: grid;
    grid-template-rows: 0fr;
    overflow: hidden;
    transition: grid-template-rows .4s ease-in-out;
}

.list-group.active .item-content {
    grid-template-rows: 1fr;
}

.list-group .item-content .table-wrapper {
    overflow: hidden;
}

.list-group .item-content table {
    margin: 20px 0;
    width: 100%;
    border-collapse: collapse;
}

.list-group .item-content table th, .list-group .item-content table td {
    padding: 15px;
    text-align: center;
    border-bottom: 1px solid var(--text-main);
}

.list-group .item-content table td {
    font-family: "Roboto Mono";
}

.list-group .item-content table tr:hover td{
    cursor: pointer;
    background-color: var(--background-hover);
}

.list-group.unfiltered,
.list-group .item-content table tr.unfiltered {
    display: none;
    color: var(--background-main);
}

.list-group .item-content table .alerts {
    background-color: var(--error);
    border-radius: 50%;
    width: 20px;
    height: 20px;
    line-height: 20px;
    font-size: 11px;
    font-weight: 600;
}

.list-group .item-content table .alerts.ok {
    background-color: transparent;
    color: var(--highlight);
    font-size: 30px;
}

.list-group .item-content table tr a {
    color: var(--text-main);
}

.list-group .item-content table tr i {
    font-size: 21px;
    margin-right: 10px;
}

.list-group .item-content table tr i:hover {
    color: var(--highlight);
}

.list-group .item-content .btn {
    margin: 20px auto 0 0;
}

.wrapper:has(> form) {
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

form {
    margin: 150px 0;
}

form h2 {
    text-align: center;
}

form .form-group label {
    display: inline-block;
    min-width: 200px;
}

form .form-group .btn {
    width: 100%;
    background-color: var(--background-main);
    color: var(--text-main);
    margin: 15px 0;
}

form .form-group .btn:hover {
    cursor: pointer;
    background-color: var(--highlight);
    color: var(--background-main);
}

form .invalid-feedback {
    color: var(--error);
    padding: 10px;
}

form .form-group .server-list {
    padding: 0 10px 10px 15px;
}

form .form-group .server-list div {
    margin: 5px 0;
}

